fixed font sizes and scrollbar display

--- a/index.css
+++ b/index.css
@@ -11,16 +11,17 @@ ul,li,a{
 }
 
 HTML{
-    font-size:62.5%;
+    font-size: 1.5vmin;
 }
-body{
-    font-size:1rem;
+
+::-webkit-scrollbar{
+    display: none;
 }
 
 /*text-size*/
 
 h1{
-    font-size:6.68rem;
+    font-size:4.39rem;
     font-family: 'Roboto Mono', monospace;
     color:rgba(255,255,255,0.8);
     font-weight:normal;
@@ -29,7 +30,7 @@ h1{
 }
 
 h2{
-    font-size:5.34rem;
+    font-size:3.95rem;
     font-family: 'Roboto Mono', monospace;
     color:rgba(255,255,255,0.8);
     font-weight:normal;
@@ -38,7 +39,7 @@ h2{
 }
 
 h3{
-    font-size:4.27rem;
+    font-size:3.51rem;
     font-family: 'Roboto Mono', monospace;
     color:rgba(255,255,255,0.8);
     font-weight:normal;
@@ -47,7 +48,7 @@ h3{
 }
 
 h4{
-    font-size:3.42rem;
+    font-size:3.07rem;
     font-family: 'Roboto Mono', monospace;
     color:rgba(255,255,255,0.8);
     font-weight:normal;
@@ -56,7 +57,7 @@ h4{
 }
 
 h5{
-    font-size:2.73rem;
+    font-size:2.63rem;
     font-family: 'Roboto Mono', monospace;
     color:rgba(255,255,255,0.8);
     font-weight:normal;
@@ -118,7 +119,7 @@ nav{
     align-items:center;
     justify-content:space-between;
     height:fit-content;
-    padding:1.6em 10.41vw;
+    padding:1.6rem 10.41vw;
     background-color:rgb(0,3,36);
     box-shadow:0 4px 6px rgba(0,3,36,0.8);
     position:sticky;
@@ -165,7 +166,7 @@ nav > div{
 nav > div > button{
     height:fit-content;
     width:fit-content;
-    font-size:1.8em;
+    font-size:1.8rem;
     padding:0.8rem 2.4rem;
     color:rgba(255,255,255,1);
     background-color:rgb(199,32,164);
@@ -180,7 +181,7 @@ nav > div > button > h6 {
 
 .menu-button{
     display:none;
-    width:40px;
+    width:4rem;
     margin:auto;
     margin-right:0;
     margin-left:16px;
@@ -841,12 +842,6 @@ footer{
 }
 
 
-
-@media (max-width:1240px){
-    HTML{
-        font-size:55.55%;
-    }
-}
 @media (max-width:1150px){
     .nav-links{
         display:none;
@@ -1044,9 +1039,7 @@ footer{
 }
 
 @media(max-width:420px){
-    HTML{
-        font-size:48.61%;
-    } 
+  
     .footer-links > div{
         flex-basis:100%;
         display:block;
@@ -1063,10 +1056,6 @@ footer{
         margin-top:2.4em;
     }
 }
-@media(max-width:320px){
-    HTML{
-        font-size:41.67%;
-    } 
-}
+
 
 
